--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,1 +1,1 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }], "functions": { "api/index.js": { "runtime": "nodejs18.x" } } }
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
