--- a/dash/package.json
+++ b/dash/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.1.2",
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.10.0",
+    "cookie": "^1.0.2",
     "framer-motion": "^12.19.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
